name:                echo
version:             0.1
synopsis:            A cross-platform, cross-console way to handle echoing terminal input
-- description:
homepage:            https://github.com/RyanGlScott/echo
bug-reports:         https://github.com/RyanGlScott/echo/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Provisional
copyright:           (C) 2016 Ryan Scott
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/echo

library
  exposed-modules:     System.IO.Echo
  other-modules:       System.IO.Echo.Internal

  build-depends:       base >= 4.3 && < 5
  if os(windows)
    build-depends:     filepath, process, Win32
    build-tools:       hsc2hs
    include-dirs:      include
    includes:          windows_cconv.h
    cpp-options:       "-DWINDOWS"
    other-modules:     System.IO.Echo.MinTTY
    extra-libraries:   ntdll

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
